--- a/inst/rmarkdown/templates/template-name/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/template-name/skeleton/skeleton.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Untitled"
-author: "Collin Edwards"
+author: "Author Name"
 date: "1/30/2020"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: 
