--- a/inst/rmarkdown/templates/template-name/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/template-name/skeleton/skeleton.Rmd
@@ -41,7 +41,153 @@ library(beepr) #package for making sound to let me know things are done. Not imp
 
 ## Function definitions
 
-### Standard Edwards functions
+### Standard Edwards' functions
+
+```{r readme_maker}
+## This is a function script for generating a template readme file for file descriptions in the current folder, labeled README-file.txt. 
+## It will recursively look through all subfolders of the working directory, and generate a nested list of all folders and files, for easy listing of file descriptions. 
+## If README-file.txt exists, it will update the README-file.txt with any changes to files or directories (adding or removing). 
+## In doing so, it use ;\n as an ending sequence -
+##    multi-line file descriptions are fine so long as they are inside the ;
+## The first two lines of the readme file must be left alone.
+## To create a clean readme file (not merge descriptions), give argument "overwrite=TRUE"
+## The exclude argument uses regular expressions to identify types of filepaths to ignore when making the readme file.
+##   By default it excludes Rmarkdown compiling folders. You can add more patterns to exclude.
+
+## Usage example:
+## setwd(C:/Dropbox/academia/currentproject)
+## readme_maker()
+## ** now go fill in the text file **
+
+require(readtext)
+require(stringr)
+
+readme_maker=function(exclude=c(".*_files/",".*_cache/"), #Rmarkdown creates these folders, we don't want to list them all.
+                      ## You can add your own patterns to exclude - uses regular expressions
+                      overwrite=FALSE #if TRUE, will NOT merge with existing readme file
+){
+  #Make list of files, remove those that match "exclude" criterion
+  fileslist=list.files(recursive=T)
+  ind.ignore=NULL;
+  for(cur.exclude in exclude){
+    ind.ignore=c(ind.ignore, grep(cur.exclude, fileslist))
+  }
+  fileslist=fileslist[-ind.ignore]
+  ## generate file path list plus header
+  temp=c("## Usage: describe file between colon and semicolon. Multi-line descriptions okay. Duplicate files in different folders are distinguished with [a], [b], etc. ##",
+         "",
+         "Project Description",
+         fileslist)
+  
+  ## set index, skipping header
+  i=4
+  ## generate obect to store current file path
+  path.cur=NULL
+  ## Loop through all
+  for(count in 4:length(temp)){
+    #Define current string
+    test.sub=temp[i]
+    #Walk down current file path
+    path.new=NULL
+    do.pathcheck=T #flag for walking down filepath
+    i.path=1 #index for subfolder number
+    depth=0 #to generate appropriate spacing
+    ## Loop through current file path, use the part that fits new file.
+    while(do.pathcheck & i.path<=length(path.cur)){
+      ## is file in this iteration of subfolders?
+      present=grepl(paste("^",
+                          path.cur[i.path],
+                          "/",
+                          sep=""),
+                    test.sub)
+      if(present) { # if it is
+        #update our new filepath
+        path.new=c(path.new, path.cur[i.path])
+        #update our depth counter
+        depth=depth+1
+        #eat this subfolder from the current file
+        test.sub=gsub(paste("^",
+                            path.cur[i.path],
+                            "/", 
+                            sep=""),
+                      "",
+                      test.sub)
+        #update index for subfolder
+        i.path=i.path+1
+      }else{ #if not, stop this checking
+        do.pathcheck=FALSE
+      }
+    }
+    #set current path to our newly calculated one
+    path.cur=path.new
+    
+    
+    #Walk downward along our current file, adding subdirectories as needed  
+    while(str_count(test.sub,"/")>0){ #if still has subfolders
+      #find name of this subfolder
+      fold=gsub("/.*", "", test.sub)
+      #update depth count
+      depth=depth+1
+      #update vector of files to include subfolder
+      temp=c(temp[1:(i-1)],
+             paste(strrep("  ",depth),fold),
+             temp[i:length(temp)])
+      #update index of vector of files
+      i=i+1
+      #update current file path
+      path.cur=c(path.cur, fold)
+      #update current file to eat subfolder name
+      test.sub=gsub(paste(fold, "/", sep=""),"", test.sub)
+    }
+    # when we're done eating subfolders
+    # update the current file to be indented, no subfolders in name 
+    temp[i]=paste(strrep("   ", depth+1),
+                  test.sub,
+                  sep="")
+    #update index
+    i=i+1
+    # }
+  }
+  ## general filepath structure is now complete
+  # add : and spaces to our filepath
+  labs.nocolon=1:2 #lines to exclude: methods description
+  labs=c(temp[labs.nocolon],sprintf("%s : ",temp[-labs.nocolon]))
+  for(lab.cur in labs){
+    ind=which(labs==lab.cur)
+    if(length(ind)>1){
+      labs[ind]= sprintf("%s[%s] : ",gsub(" : $","",labs[ind]),letters[1:length(ind)])
+    }
+  }
+  
+  
+  ## Handle merging with existing file, if present.
+  if(file.exists("README-files.txt") & !overwrite){
+    #read in file
+    t=readtext("README-files.txt")
+    #remove header stuff
+    tempstore=strsplit(t$text, "##\n\n")[[1]]
+    #separate using ;\n to accomodate multi-line descriptions
+    raw=strsplit(tempstore[2], ";\n")[[1]]
+    rawtemp=labs
+    #create vector from existing file that includes only parts that would match with our labs
+    rawmatch=gsub(": .*",": ",raw)
+    #for each line of existing file, replace base filepath with the existing one (including user descriptions)
+    for(i in 1:length(rawmatch)){
+      cur.line=rawmatch[i]
+      rawtemp[rawtemp==cur.line]=raw[i]
+    }
+    #save file
+    cat(rawtemp[labs.nocolon], file="README-files.txt", sep="\n")
+    cat(rawtemp[-labs.nocolon], file="README-files.txt", sep=";\n", append = T)
+  }else{
+    #save file
+    cat(labs[labs.nocolon], file="README-files.txt", sep="\n")
+    cat(labs[-labs.nocolon], file="README-files.txt", sep=";\n", append = T)
+  }
+}
+
+
+```
 
 ```{r doy_2md}
 ## function for turning DOY to month-day for visualization
@@ -246,6 +392,17 @@ gfig_saver=function(gfig, #object to be saved
 
 ```
 
+
+## Readme files
+
+By default, my Rmarkdown files live one folder down from my project directory. The following code creates a skeleton readme file one folder up from the current one (or updates it if it already exists). Cut out all but the `readme_maker()` lines to create a readme in the current working directory instead of one folder up.
+
+```{r}
+old.wd=getwd()# save current directory
+setwd("..") #move one folder up
+readme_maker() #make readme file
+setwd(old.wd) #move back to previous directory
+```
 
 
 # [something something main document sections]
